--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+	<!-- Start of StatCounter Code for DoYourOwnSite -->
+<script type="text/javascript">
+var sc_project=11152425; 
+var sc_invisible=1; 
+var sc_security="fee4730a"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="hit counter"
+href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="//c.statcounter.com/11152425/0/fee4730a/1/" alt="hit
+counter"></a></div></noscript>
+<!-- End of StatCounter Code for DoYourOwnSite -->
 
 </head>
 
