--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 			<div class="col-md-4">
                 <h3>Unit I</h3>
                 <p>
-                    Plot NO.46 & 49, Sy No.160-163,<br>Narayana Swamy Nagar, Behind TEC Building,<br>Charlapalli,RangaReddy D.T, Telangana - 500051.<br>
+                    Plot NO.46 & 49, Sy No.160-163,<br>Narayana Swamy Nagar, Behind TEC Building,<br>Cherlapally,RangaReddy D.T, Telangana - 500051.<br>
                 </p>
                  <p><i class="fa fa-phone"></i> 
                     <abbr title="Phone">P</abbr>: +918790701477 +919912755277</p>
