--- a/404.html
+++ b/404.html
@@ -98,7 +98,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; sveps.co.in 2016</p>
+                  <p> &copy; 2016- 2021 Sree Vaishnavi Engineering & Pump Solutions,All rights reserved.</p>
                 </div>
             </div>
         </footer>
