--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
                     D.No.C-15, Electronic Complex.<br>Kushaiguda Industrial Area, ECIl Post,<br>Hyderabad, Telangana - 500062.<br>
                 </p>
                  <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: +918790701477 +919912755277</p>
+                    <abbr title="Phone">P</abbr>: 040 64575277 +918790701477 +919912755277</p>
                 <p><i class="fa fa-envelope-o"></i> 
                     <abbr title="Email">E</abbr>: <a href="mailto:info@sveps.co.in">info@sveps.co.in</a>
                 </p>
