--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ counter"></a></div></noscript>
                 <h3 class="page-header">AUTHORIZED DEALERS FOR KIRLOSKAR PUMPS & MOTORS</h3>
             </div>
             <div class="col-md-4 col-sm-6" >
-                <a href="404.html">
+                <a href="watersupply.html">
                     <img class="img-responsive img-portfolio img-hover" src="images/watersupply.jpg" alt="Water supply">
                 </a>
 				 <div class="carousel-caption">
