--- a/404.html
+++ b/404.html
@@ -48,13 +48,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="404.html">About</a>
                     </li>
                     <li>
                         <a href="404.html">Products & Services</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="index.html">Contact</a>
                     </li>
                     
                 </ul>
