--- a/watersupply.html
+++ b/watersupply.html
@@ -2,6 +2,7 @@
 <html ng-app="plunker">
   <head>
     <title>Sree Vaishnavi Engineering & Pump Solutions</title>
+	   <meta name="viewport" content="width=device-width">
     <script src="js/angular.min.js"></script>
     <script src="js/ui-bootstrap-tpls-0.10.0.js"></script>
     <script src="js/example.js"></script>
@@ -10,6 +11,7 @@
 
 
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	 
 
   </head>
 <body>
