--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+	<!-- Default Statcounter code for Sveps.co.in
+http://www.sveps.co.in -->
+<script type="text/javascript">
+var sc_project=11152425; 
+var sc_invisible=1; 
+var sc_security="fee4730a"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="//c.statcounter.com/11152425/0/fee4730a/1/" alt="Web
+Analytics"></a></div></noscript>
+<!-- End of Statcounter Code -->
 
 </head>
 
